updated seat logic